Add docker-api
With aiohttp but kinda buggy
