# src/whattheversion/models/__init__.py
@@ -1,3 +1,4 @@
 from .git import GitRequest, GitResponse, GitTags, GitTag
 from .helm import HelmRequest, HelmResponse, HelmChart, HelmChartEntry
 from .versions import Versions, Version
+from .docker import DockerRequest, DockerResponse, DockerRepository, DockerImageTag
